# hello_jni

./: .gitignore  README.md
cross_compile/: CMakeLists.txt  build.sh  mymath.cpp  mymath.h
demo/app/: build.gradle
demo/app/src/androidTest/java/ren/vic/jnidemo/: ExampleInstrumentedTest.java
demo/app/src/main/: AndroidManifest.xml
demo/app/src/main/cpp/: CMakeLists.txt  hello.cpp  hello.h  native-lib.cpp
demo/app/src/main/java/ren/vic/jnidemo/: MainActivity.java  Testing.java
demo/app/src/test/java/ren/vic/jnidemo/: ExampleUnitTest.java
hello_aar/: settings.gradle
hello_aar/app/: build.gradle
hello_aar/app/src/main/: AndroidManifest.xml
hello_aar/app/src/main/java/ren/vic/helloaar/: EngineDelegate.java  MainActivity.java  VideoActivity.java
hello_aar/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_video.xml
hello_aar/app/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
hello_aar/app/src/main/res/values-night/: themes.xml
hello_aar/lsrtc-debug/: build.gradle
hello_world/: hello_world.c  make.sh
hello_world_cpp/: HelloWorld.java  hello_world.cpp  make.sh
import_libs/app/: CMakeLists.txt  build.gradle
import_libs/app/src/androidTest/java/ren/vic/importlibs/: ExampleInstrumentedTest.java
import_libs/app/src/main/: AndroidManifest.xml
import_libs/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
import_libs/app/src/main/java/ren/vic/importlibs/: MainActivity.java
import_libs/app/src/main/res/values/: strings.xml  themes.xml
import_libs/app/src/main/res/values-night/: themes.xml
import_libs/app/src/test/java/ren/vic/importlibs/: ExampleUnitTest.java
java_callback/: settings.gradle
java_callback/app/: build.gradle
java_callback/app/src/main/: AndroidManifest.xml
java_callback/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
java_callback/app/src/main/cpp/src/: testing.cpp  testing.h
java_callback/app/src/main/java/ren/vic/javacallback/: MainActivity.java
java_callback/app/src/main/res/values/: strings.xml  themes.xml
java_callback/app/src/main/res/values-night/: themes.xml
java_callback/gradle/wrapper/: gradle-wrapper.properties
sandbox/: CMakeLists.txt
sandbox/example/: CMakeLists.txt  main.cpp
sandbox/rtc/: irtc_engine.h  irtc_engine_impl.cpp  irtc_engine_impl.h
sandbox/sdk/android/: settings.gradle
sandbox/sdk/android/app/: build.gradle
sandbox/sdk/android/app/src/androidTest/java/ren/vic/rtc/: ExampleInstrumentedTest.java
sandbox/sdk/android/app/src/main/: AndroidManifest.xml
sandbox/sdk/android/app/src/main/res/values/: themes.xml
sandbox/sdk/android/gradle/wrapper/: gradle-wrapper.properties
sandbox/sdk/android/rtc/: .gitignore  CMakeLists.txt  build.gradle
sandbox/sdk/android/rtc/src/androidTest/java/ren/vic/rtc/: ExampleInstrumentedTest.java
sandbox/sdk/android/rtc/src/main/: AndroidManifest.xml
sandbox/sdk/android/rtc/src/main/java/ren/vic/rtc/: IRtcEngine.java  IRtcEngineEventHandler.java  MainActivity.java  RtcEngine.java  Testing.java
sandbox/sdk/android/rtc/src/main/java/ren/vic/rtc/internal/: Marshallable.java  RtcEngineImpl.java  RtcEngineMessage.java
sandbox/sdk/android/rtc/src/main/java/ren/vic/rtc/models/: Events.java
sandbox/sdk/android/rtc/src/main/jni/: irtc_engine_handler_jni.cpp  native-lib.cpp
sandbox/sdk/android/rtc/src/main/jni/data/: event.h
sandbox/sdk/android/rtc/src/main/jni/include/: irtc_engine_handler_jni.h
sandbox/sdk/android/rtc/src/main/res/values/: strings.xml
sandbox/sdk/android/rtc/src/main/res/values-night/: themes.xml
sandbox/sdk/android/rtc/src/test/java/ren/vic/rtc/: ExampleUnitTest.java
websocket/app/: build.gradle
websocket/app/src/androidTest/java/com/lstaas/websocket/: ExampleInstrumentedTest.java
websocket/app/src/main/: AndroidManifest.xml
websocket/app/src/main/cpp/: CMakeLists.txt  TestWebSocket.cpp  TestWebSocket.h  native-lib.cpp
websocket/app/src/main/cpp/example/: CMakeLists.txt  main.cpp
websocket/app/src/main/java/com/lstaas/websocket/: MainActivity.java
websocket/app/src/main/res/layout/: activity_main.xml
websocket/app/src/test/java/com/lstaas/websocket/: ExampleUnitTest.java
